--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Anmol sood",
+    "alternateName": ["hindi teacher", "Education ", "MSH"],
+    "url": "https://anmolsood0007.github.io/ooo7/"
+  }
+</script>
     <meta name="google-site-verification" content="52x7LbtWLlFjR04Y2SovjqQuTYc0Wuig1g5nP9_qxbQ" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
