--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="application/ld+json">
+  <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>anmol sood hindi</title>
+    <title>anmol sood hindi teacher</title>
     <script src="https://carrier.formcarry.com/js/v1.js"></script>
    <body style="background-color:azure">
     <bg color="light bg-purple-500"></bg>
