--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>anmol sood hindi teacher</title>
+     <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Anmol sood",
+    "alternateName": ["hindi teacher", "Education ", "MSH"],
+    "url": "https://anmolsood0007.github.io/ooo7/"
+  }
+</script>
     <script src="https://carrier.formcarry.com/js/v1.js"></script>
    <body style="background-color:azure">
     <bg color="light bg-purple-500"></bg>
