--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Anmol sood",
-    "alternateName": ["hindi teacher", "Education ", "MSH"],
+    "alternateName": ["hindi", "Education ", "MSH"],
     "url": "https://anmolsood0007.github.io/ooo7/"
   }
 </script>
@@ -14,13 +14,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>anmol sood hindi teacher</title>
+    <title>anmol sood </title>
      <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Anmol sood",
-    "alternateName": ["hindi teacher", "Education ", "MSH"],
+    "alternateName": ["hindi", "Education ", "MSH"],
     "url": "https://anmolsood0007.github.io/ooo7/"
   }
 </script>
@@ -33,7 +33,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl"><b>anmol sood</b>-<b>hindi teacher </b><br> </span>
+            <span class="ml-3 text-xl"><b>anmol sood</b>-<b></b><br> </span>
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-red -400	flex flex-wrap items-center text-base justify-center">
             <button><a href=""  Class="inline-flex text-black bg-white -500 border-0 py-0.5 px-2  focus:outline-none hover:bg-yellow-600 rounded text-lg">वीडियो -> </a></button><br>
