--- a/index.html
+++ b/index.html
@@ -37,24 +37,25 @@
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-red -400	flex flex-wrap items-center text-base justify-center">
             <button><a href=""  Class="inline-flex text-black bg-white -500 border-0 py-0.5 px-2  focus:outline-none hover:bg-yellow-600 rounded text-lg">वीडियो -> </a></button><br>
-           <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kWH0E09fLmst3Aof5BTr5KI&si=AiFBG36hWjhL6Im-"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5  px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">छठी </a></button>
-        .
-            <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kWshYUzAUL5XevcEVmg0ABI&si=ZI2KJaVvUAOqJKgp"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5 px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">सातवीं </a></button><br>
-        . 
-        <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kWUUOV_Cqr3eDrm_nlPEb8Q&si=BTMiYTvVgs-F1suj"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5 px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">आठवीं </a></button><br>
-        .  
+           
+           <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kWH0E09fLmst3Aof5BTr5KI&si=AiFBG36hWjhL6Im-"  Class="inline-flex text-white bg-purple-500 border-5 py-0.5  px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">छठी </a></button>
+           .
+            <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kWshYUzAUL5XevcEVmg0ABI&si=ZI2KJaVvUAOqJKgp"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5 px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">सातवीं </a></button>
+           .
+        <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kWUUOV_Cqr3eDrm_nlPEb8Q&si=BTMiYTvVgs-F1suj"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5 px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">आठवीं </a></button>
+           .
         <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kUOqiEuz5-KLZJyhV2G-dLl&si=xLfgS3MRjUd43v6T"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5  px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">नौवीं  </a></button>
-        . 
+           .
         <button><a href="https://youtube.com/playlist?list=PLkjXYKJw23kUtql7CQbU2AzNOs-WvVREA&si=LNZLnQCxyWueWPV7"  Class="inline-flex text-white bg-purple-500 border-0 py-0.5  px-4 focus:outline-none hover:bg-yellow-600 rounded text-lg">दसवीं </a></button>
-     ----
+           ==
      <style type="text/css">
           .maxbutton {
             position: relative;
             text-decoration: none;
             display: inline-block;
             vertical-align: middle;
-            width: 160px;
-            height: 50px;
+            width: 100px;
+            height: 35px;
             border: 2px groove #505ac7;
             border-radius: 4px 4px 4px 4px;
             background: #2e4975;
@@ -78,7 +79,7 @@
           .maxbutton .mb-text {
             color: #ffffff;
             font-family: Tahoma;
-            font-size: 17px;
+            font-size: 12px;
             text-align: center;
             font-style: normal;
             font-weight: bold;
@@ -87,7 +88,7 @@
             display: block;
             background-color: unset;
             position: relative;
-            padding: 14px 0px 0px 0px;
+            padding: 10px 0px 9px 0px;
           }
           .maxbutton:hover .mb-text {
             color: #505ac7;
@@ -95,8 +96,7 @@
           </style>
           <a class="maxbutton" title="app" href="https://drive.google.com/file/d/1GBf75uyL7Q-9CJuU7LygAET-D_iV0VJn/view?usp=drive_link" download="" data-maxbuttoncounter="{&quot;button_id&quot;:989909,&quot;url&quot;:&quot;https:\/\/drive.google.com\/file\/d\/1GBf75uyL7Q-9CJuU7LygAET-D_iV0VJn\/view?usp=drive_link&quot;,&quot;check&quot;:&quot;anyapdc5&quot;}" data-maxbuttonpage="{&quot;id&quot;:false,&quot;type&quot;:false}"><span class='mb-text' >Download app</span></a>
           </nav>
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
+           
             </svg>
           </button>
         </div>
