--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>अनमोल सूद हिन्दी शिक्षक </title>
+    <link rel="icon" type="image" href="https://i.postimg.cc/d0JxyXmp/apple-touch-icon.png">
      <script type="application/ld+json">
   {
     "@context": "https://schema.org",
