--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>अनमोल सूद हिन्दी शिक्षक </title>
+  
     <link rel="icon" type="image" href="https://i.postimg.cc/d0JxyXmp/apple-touch-icon.png">
      <script type="application/ld+json">
   {
@@ -29,7 +30,8 @@
 </script>
 
     <script src="https://carrier.formcarry.com/js/v1.js"></script>
-   <body style="background-color:azure">
+    <link rel="index.css">
+   <body background="https://i.postimg.cc/cH7gSfpC/image-share-1710499561006.png"> </body>
     <bg color="light bg-purple-500"></bg>
     <header class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
