--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="container px-5 py-24 mx-auto">
           
           <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
-            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900"><B>पाठ्य पुस्तक <br> क्लास 8 क्विज़ </h1></B>
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900"><B> क्विज़ </h1></B>
             <p class="lg:w-1/2 w-full leading-relaxed text-black"><B>QUIZ SECTION BY ANMOL SOOD (HINDI TEACHER)@HINDI</p></B>
           </div>
           <div class="flex flex-wrap -m-2 ">
@@ -214,7 +214,7 @@
                   </svg>
                 </div>
                 <h2><a href="https://quizzory.in/id/65cf04be0683fc67ab93a9b7"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                <p class="leading-relaxed text-base">  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎कक्षा 8 पाठ-2 पिंजरे का शेर ।‎  ‎  ‎ ‎  ‎ ‎ ‎    
+                <p class="leading-relaxed text-base">  ‎  ‎    ‎  ‎ ‎  ‎ ‎कक्षा 8 पाठ-2 पिंजरे का शेर ।‎  ‎  ‎ ‎  ‎ ‎ ‎    
                 </p></a>
               </div>
             </div>
@@ -270,7 +270,7 @@
                   </svg>
                 </div>
                 <h2><a href="https://quizzory.in/id/65cf240d0683fc67ab93b9f1"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                <p class="leading-relaxed text-base"> ‎  ‎  ‎   ‎  ‎कक्षा 8 पाठ-6 नील गगन का नीलू । ‎‎  ‎ </p></a>
+                <p class="leading-relaxed text-base"> ‎  ‎  ‎   ‎  ‎कक्षा 8 पाठ-6 नील गगन का नीलू  ‎‎  ‎ </p></a>
                 </div></div><div class="flex flex-wrap -m-4">
                   <div class="xl:w-1/3 md:w-1/2 p-6 ">
                     <div class="border border-red-900 p-6 rounded-lg">
@@ -361,7 +361,7 @@
                             </svg>
                           </div>
                           <h2><a href="https://quizzory.in/id/65d0328592b8406813844156"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                          <h3 class="text-lg text-gray-900 font-large  title-font mb-2">कक्षा 8 पाठ-13 माँ । ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ </h3></a>
+                          <h3 class="text-lg text-gray-900 font-large  title-font mb-2">  ‎  ‎ ‎   ‎    ‎  ‎ ‎  ‎  ‎  ‎  ‎  ‎  ‎ कक्षा 8 पाठ-13 माँ । ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎  ‎ </h3></a>
                           ‎  ‎  ‎  ‎  ‎ ‎  ‎  ‎  ‎ 
                         </div></div>
                         <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -374,7 +374,7 @@
                               </svg>
                             </div>
                             <h2><a href="https://quizzory.in/id/65d03b21b84ace67526e56d2"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                            <p class="leading-relaxed text-base">कक्षा 8 पाठ-14 सहयोग।  </p></a>
+                            <p class="leading-relaxed text-base">  ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎   ‎  ‎ कक्षा 8 पाठ-14 सहयोग।   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎  </p></a>
                           </div></div>
                           <div class="xl:w-1/3 md:w-1/2 p-4">
                             <div class="border border-red-900 p-6 rounded-lg">
@@ -386,7 +386,7 @@
                                 </svg>
                               </div>
                               <h2><a href="https://quizzory.in/id/65d040d45d965065e8c92820"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                              <p class="leading-relaxed text-base">कक्षा 8 पाठ-15 वाघा बॉर्डर </p></a>
+                              <p class="leading-relaxed text-base">  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎ कक्षा 8 पाठ-15 वाघा बॉर्डर   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎ </p></a>
                             </div></div>
                             <div class="xl:w-1/3 md:w-1/2 p-4">
                               <div class="border border-red-900 p-6 rounded-lg">
@@ -398,7 +398,7 @@
                                   </svg>
                                 </div>
                                 <h2><a href="https://quizzory.in/id/65d046ddb84ace67526e5a2f"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                                <p class="leading-relaxed text-base">कक्षा 8 पाठ-16 गिरधर की कुंडलियाँ  </p></a>
+                                <p class="leading-relaxed text-base">  ‎  ‎ ‎  कक्षा 8 पाठ-16 गिरधर की कुंडलियाँ   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎  </p></a>
                               </div></div>
                               <div class="xl:w-1/3 md:w-1/2 p-4">
                                 <div class="border border-red-900 p-6 rounded-lg">
@@ -410,7 +410,7 @@
                                     </svg>
                                   </div>
                                   <h2><a href="https://quizzory.in/id/65d04ca0d56cc9662d985f03"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                                  <p class="leading-relaxed text-base">कक्षा  8 पाठ-17 मेरा दम घुटता है । </p></a>
+                                  <p class="leading-relaxed text-base">  ‎  ‎ ‎  कक्षा  8 पाठ-17 मेरा दम घुटता है ।  ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎  </p></a>
                                 </div></div>
                                 <div class="xl:w-1/3 md:w-1/2 p-4">
                                   <div class="border border-red-900 p-6 rounded-lg">
@@ -434,7 +434,7 @@
                                         </svg>
                                       </div>
                                       <h2><a href="https://quizzory.in/id/65d057bbffbe9366c9ccfd23"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                                      <p class="leading-relaxed text-base">कक्षा  8 पाठ-19 होंगे कामयाब ।  </p></a>
+                                      <p class="leading-relaxed text-base">  ‎  ‎‎  ‎‎  ‎  ‎  कक्षा  8 पाठ-19 होंगे कामयाब ।  ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   ‎  ‎ ‎  ‎  ‎  ‎   </p></a>
                                     </div></div>
                     <div class="xl:w-1/3 md:w-1/2 p-4">
                       <div class="border border-red-900 p-6 rounded-lg">
@@ -446,7 +446,7 @@
                           </svg>
                         </div>
                         <h2><a href="https://quizzory.in/id/65d0593d111f0367d78f5625"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                        <p class="leading-relaxed text-base">कक्षा 8 पाठ-20 सरफरोशी की तमन्ना </p></a>
+                        <p class="leading-relaxed text-base">‎  ‎‎  ‎‎  ‎‎  ‎कक्षा 8 पाठ-20 सरफरोशी की तमन्ना‎  ‎‎  ‎‎  ‎‎  ‎ </p></a>
                       </div></div></div></div></div>
 
 
