--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="viewport" content= "width=device-width, user-scalable=no">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>अनमोल सूद हिन्दी शिक्षक </title>
     <style>
@@ -37,8 +40,14 @@
 </script>
 
     <script src="https://carrier.formcarry.com/js/v1.js"></script>
-    <link rel="index.css">
-   <body background="https://i.postimg.cc/cH7gSfpC/image-share-1710499561006.png"> </body>
+    <link rel="style.css">
+    <link rel="script.js">
+   <body background="https://i.postimg.cc/cH7gSfpC/image-share-1710499561006.png"> 
+    <div class="loading-container">
+      <div class="loading"></div>
+    </div>
+    <script src="script.js"></script>
+   </body>
     <bg color="light bg-purple-500"></bg>
     <header class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
