--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   
     <link rel="icon" type="image" href="https://i.postimg.cc/d0JxyXmp/apple-touch-icon.png">
      <script type="application/ld+json">
+      
   {
+
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Anmol sood",
@@ -38,6 +40,16 @@
     "url": "https://anmolsood0007.github.io/ooo7/"
   }
   
+</script>
+<script type="text/javascript">
+ 
+   
+  //prevent right click
+  document.oncontextmenu = () => {
+    alert("Don't try to right click")    
+    return false
+  }
+ 
 </script>
 <body>
     <script src="https://carrier.formcarry.com/js/v1.js"></script>
