--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                   </svg>
                 </div>
                 <h2><a href="https://quizzory.in/id/65cf04be0683fc67ab93a9b7"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                <p class="leading-relaxed text-base">  ‎  ‎    ‎  ‎ ‎  ‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ ‎ ‎कक्षा 8 पाठ-2 पिंजरे का शेर ।‎  ‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎ ‎    
+                <p class="leading-relaxed text-base">  ‎  ‎    ‎  ‎ ‎  ‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ ‎ ‎कक्षा 8 पाठ-2 पिंजरे का शेर ‎  ‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎ ‎    
                 </p></a>
               </div>
             </div>
@@ -293,7 +293,7 @@
                   </svg>
                 </div>
                 <h2><a href="https://quizzory.in/id/65cf0b8a0683fc67ab93ad6f"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><B>START QUIZ</B></h2>
-                <p class="leading-relaxed text-base"> ‎  ‎  ‎  ‎कक्षा 8 पाठ-3 मेट्रो रेल का सुहाना सफर ।   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ 
+                <p class="leading-relaxed text-base"> ‎  ‎  ‎  ‎कक्षा 8 पाठ-3 मेट्रो रेल का सुहाना सफर    ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ 
               </p></a> </p></a>
               </div>
             </div>
@@ -822,7 +822,7 @@
                             </svg>
                           </div>
                           <h2><a href="https://quizzory.in/id/65d597898da07e513f1fbb7c"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><b>START QUIZ</b></h2>
-                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक पाठ 1‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
+                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक 1‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
                         </div>
                       </div>
                       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -832,10 +832,10 @@
                               <circle cx="6" cy="6" r="3"></circle>
                               <circle cx="6" cy="18" r="3"></circle>
                               <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
-                            </svg>target="_main"
+                            </svg>
                           </div>
-                          <h2><a href="https://quizzory.in/id/65d59c16651c4f50f73e3160"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><b>START QUIZ</b></h2>
-                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक पाठ 2‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
+                          <h2><a href="https://quizzory.in/id/65d59c16651c4f50f73e3160"target="_main" class="text-lg text-gray-900 font-medium title-font mb-2"><b>START QUIZ</b></h2>
+                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक 2‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
                         </div>
                       </div>
                       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -848,7 +848,7 @@
                             </svg>
                           </div>
                           <h2><a href="https://quizzory.in/id/65d5a0264507b750f14889f0"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><b>START QUIZ</b></h2>
-                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक पाठ 3‎  ‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
+                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक 3‎  ‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
                         </div>
                       </div>
                       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -861,7 +861,7 @@
                             </svg>
                           </div>
                           <h2><a href="https://quizzory.in/id/65d5ab1428db1f51ccf5b06d"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><b>START QUIZ</b></h2>
-                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक पाठ 4‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
+                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक 4‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
                         </div>
                       </div>
                       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -874,7 +874,7 @@
                             </svg>
                           </div>
                           <h2><a href="https://quizzory.in/id/65d5af38e5458351e5d18aa6"target="_main"class="text-lg text-gray-900 font-medium title-font mb-2"><b>START QUIZ</b></h2>
-                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक पाठ 5‎  ‎ ‎  ‎ ‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
+                          <p class="leading-relaxed text-base">‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎ अनेक आर्थक 5‎  ‎ ‎  ‎ ‎‎  ‎  ‎ ‎  ‎  ‎ ‎  ‎  ‎   ‎ ‎  ‎ ‎  ‎ ‎  </p></a>
                         </div>
                       </div>
                       <div class="xl:w-1/3 md:w-1/2 p-4">
