--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
       <div class="container mx-auto flex px-3 py-0.5 md:flex- flex- items-center" data-aos="fade-in">
 
         ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ <button><a
-            href="https://drive.google.com/drive/folders/1ibmB9yN2UDUAJToKLezObWdGi4S_dWkW?usp=drive_link"
-            Class="inline-flex text-white bg-purple-500 border-0 py-0.5 px-7 focus:outline-none hover:bg-yellow-600 rounded text-lg">पाठ्यक्रम
+            href="https://drive.google.com/drive/folders/1ibmB9yN2UDUAJToKLezObWdGi4S_dWkW?usp=drive_link" 
+            Class="inline-flex text-white bg-purple-500 border-0 py-0.5 px-7 focus:outline-none hover:bg-yellow-600 rounded text-lg" target="_main">पाठ्यक्रम
           </a></button><button><a
             href="https://drive.google.com/drive/folders/1idWH-yOtSZVkQLSLStCIQ9eaGqUHjnmt?usp=drive_link"
-            Class="inline-flex text-white bg-orange-500 border-0 py-0.5 px-3 focus:outline-none hover:bg-yellow-600 rounded text-lg">पाठ्य
+            Class="inline-flex text-white bg-orange-500 border-0 py-0.5 px-3 focus:outline-none hover:bg-yellow-600 rounded text-lg" target="_main">पाठ्य
             पुस्तक </a></button><br>
         <br>
       </div>
