--- a/index.html
+++ b/index.html
@@ -1715,5 +1715,63 @@ document.addEventListener('DOMContentLoaded', function() {
     iframe.style.height = height + 'px';
   }
 </script>
+<style>
+  /* Styling for the chatbot button */
+  #chatbot-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  /* Styling for the chatbot floating screen */
+  #chatbot-screen {
+    display: none;
+    position: fixed;
+    bottom: 70px;
+    right: 30px;
+    width: 300px;
+    height: 400px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    padding: 10px;
+    overflow-y: auto;
+  }
+  
+  /* Styling for the back button */
+  #back-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #007bff;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+</style>
+</head>
+<body>
+
+<div id="chatbot-button" onclick="toggleChatbot()">Chatgpt</div>
+
+<div id="chatbot-screen">
+  <button id="back-button" onclick="toggleChatbot()">Back</button>
+  <iframe src="https://copilot.microsoft.com/" style="width:100%;height:100%;border:none;"></iframe>
+</div>
+
+<script>
+  function toggleChatbot() {
+    var chatbotScreen = document.getElementById("chatbot-screen");
+    chatbotScreen.style.display = chatbotScreen.style.display === "none" ? "block" : "none";
+  }
+</script>
+
 
 </html>
