--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
   </script>
 
   <body>
+   
+  <script src="script.js"></script>
     <script src="https://carrier.formcarry.com/js/v1.js"></script>
     <link rel="style.css">
     <link rel="script.js">
@@ -224,7 +226,7 @@
         <div class="column mx-auto flex px-5 py-0.01 md:flex-row flex-col items-right"data-aos="zoom-in">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-9/6 mb-10 md:mb-0">
             ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ <img class="object-cover object-CENTER rounded"
-              src="https://source.unsplash.com/720x400/?.books" alt="hero">
+              src="https://i.postimg.cc/BQHzHHCp/1000145873.jpg" alt="hero">
 
           </div>
           <style>
